# smfs

./: .gitignore  Cargo.toml  LICENSE  README.md
bash/: README.md  biome.json  package.json
bash-py/supermemory_bash/: _shell.py  _volume.py
bash-py/tests/: test_shell.py  test_volume.py
bash/examples/: anthropic-sdk.ts  openai-sdk.ts  vercel-ai-sdk.ts
bash/src/: create-bash.ts  errors.ts  filepath.ts  index.ts  path-index.ts  supermemory-fs.ts  tool-description.ts  volume.ts
bash/src/commands/: sgrep.ts
bash/src/validation/: pipeline.ts  types.ts
bash/tests/: create-bash.test.ts  filepath.test.ts  integration.test.ts  path-index.test.ts  supermemory-fs.test.ts  volume.test.ts
mount/: Cargo.toml
mount/crates/smfs/: Cargo.toml
mount/crates/smfs-core/: Cargo.toml
mount/crates/smfs-core/src/: lib.rs
mount/crates/smfs-core/src/api/: dto.rs  mod.rs
mount/crates/smfs-core/src/cache/: db.rs  file.rs  fs.rs  mod.rs  profile.rs  schema.sql  tests.rs
mount/crates/smfs-core/src/config/: credentials.rs  mod.rs
mount/crates/smfs-core/src/daemon/: mod.rs
mount/crates/smfs-core/src/mount/: fuse.rs  mod.rs  nfs.rs
mount/crates/smfs-core/src/sync/: mod.rs  push.rs  scan.rs
mount/crates/smfs-core/src/vfs/: error.rs  mod.rs  types.rs
mount/crates/smfs/src/: main.rs
mount/crates/smfs/src/cmd/: auth.rs  daemon_inner.rs  daemon_runtime.rs  grep.rs  init.rs  login.rs  mod.rs  mount.rs  status.rs  sync.rs  unmount.rs
python/: README.md  pyproject.toml
python/supermemory_bash/: __init__.py  _client.py  _errors.py  _path_index.py  _shell.py  _tool_description.py  _volume.py
python/tests/: test_integration.py  test_shell.py
(+14 files in other folders)
