[workspace]
resolver = "2"
members = [
    "crates/smfs-core",
    "crates/smfs",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/supermemoryai/supermemoryfs"
authors = ["Supermemory <support@supermemory.ai>"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# errors + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sync primitives + POSIX constants
parking_lot = "0.12"
libc = "0.2"

# internal
smfs-core = { path = "crates/smfs-core" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
