[package]
name = "smfs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "supermemoryfs core library — VFS trait, local cache, mount adapters, sync engine, Supermemory API client"

[lib]
name = "smfs_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
